Fixed home page covers

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1262,7 +1262,8 @@ a.genre {
   display: inline-block;
   text-indent: 100%;
   white-space: nowrap;
-  overflow: hidden; }
+  overflow: hidden;
+  background-size: contain; }
 
 h1.home {
   font-size: 16px; }
