--- a/sass/200-styles.scss.css
+++ b/sass/200-styles.scss.css
@@ -1073,6 +1073,7 @@ a.genre {
 	text-indent: 100%;
 	white-space: nowrap;
 	overflow: hidden;
+	background-size: contain;
 }
 
 h1.home {
